site/style.css
/* ... */
html{
  scroll-padding-top: calc(var(--pst-header-height) + 12px);
}

body {
  padding-top: calc(var(--pst-header-height) + 20px);
  font-family: var(--default-font);
  color: var(--default-text);
  font-size: 14px;
}

/* typography */
p,
li {
  line-height: 1.8em;
}

p.__decorative {
  font-size: var(--heading-4);
}

h1,
h2,
h3,
h4,
h5 {
  font-family: var(--heading-font);
  color: var(--logo-blue);
}

h1 {
  font-size: var(--heading-1);
}

h2 {
  font-size: var(--heading-2);
}

h3 {
  font-size: var(--heading-3);
}

h4 {
  font-size: var(--heading-4);
}

h5 {
  font-size: var(--heading-5);
  letter-spacing: 1px;
  text-transform: uppercase;
  color: var(--pale-blue);
}

a {
  font-weight: var(--bold);
  color: var(--bold-orange);
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

a.link--offsite {
  font-family: var(--heading-font);
  font-size: var(--heading-4);
  display: block;
  position: relative;
  left: 0;
  transition: left 0.2s ease-in-out;
}

a.link--offsite:hover {
  left: 10px;
}

a.link--offsite::after {
  display: inline-block;
  font-style: normal;
  font-variant: normal;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
  font-size: 14px;
  content: "\f061";
  font-family: "Font Awesome 5 Free";
  font-weight: 900;
  margin-left: 10px;
}

ul.no-padding {
  padding-inline-start: 1em;
  margin: 0 0 0 2px;
}

/* buttons */
.button,
a.button {
  background-color: var(--blue);
  padding: 15px 20px;
  width: fit-content;
  display: block;
  border-radius: var(--border-radius);
  color: var(--white);
  margin: 1em 0;
  font-family: var(--heading-font);
  font-size: var(--heading-4);
  font-weight: var(--regular);
  box-shadow: var(--shadow);
}

.button::after,
a.button::after {
  content: "";
  margin-left: 60px;
  background: url("_images/arrow-right-solid-white.png") no-repeat 0 0;
  background-size: 13px 15px;
  height: 15px;
  width: 15px;
  display: inline-block;
  vertical-align: middle;
  transition: margin 0.2s ease-out;
}

.button:hover::after,
a.button:hover::after {
  margin-left: 80px;
}

.button--purple,
a.button--purple {
  background: var(--viridis-purple);
}

.button--blue,
a.button--blue {
  background: var(--viridis-blue);
}

.button--teal,
a.button--teal {
  background: var(--viridis-teal);
}

.button--green,
a.button--green {
  background: var(--viridis-green);
  color: var(--black);
}

.button--green::after,
a.button--green::after {
  background-image: url("_images/arrow-right-solid-black.png");
}

/* horizontal rules */

.rule {
  width: 100%;
  background-color: var(--light-gray);
  border: none;
  height: 1px;
  margin-bottom: 1.5em;
}

.rule--viridis {
  background-image: var(--viridis);
  height: 3px;
}

/* callout boxes */
.callout {
  border-left: solid 1px var(--light-gray);
  border-bottom: solid 1px var(--light-gray);
  border-right: solid 1px var(--light-gray);
  border-bottom-right-radius: var(--border-radius);
  border-bottom-left-radius: var(--border-radius);
  box-shadow: var(--shadow);
  margin-bottom: 20px;
  padding: 28px 20px 20px;
  position: relative;
}

.callout--vertical {
  display: flex;
  flex-direction: row;
}

.callout--vertical p:last-child {
  margin-bottom: 0;
}

.callout--vertical.callout:last-child {
  margin-bottom: 0;
}

.callout::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  display: block;
  height: 8px;
  width: 100%;
  background-color: var(--blue);
}

.callout--purple::before {
  background-image: var(--viridis-purple);
}

.callout--blue::before {
  background-image: var(--viridis-blue);
}

.callout--teal::before {
  background-image: var(--viridis-teal);
}

.callout--green::before {
  background-image: var(--viridis-green);
}

.callout__icon {
  color: var(--logo-blue);
  font-size: 2em;
  margin-right: 10px;
}

.callout--vertical .callout__icon {
  align-self: center;
}

.callout > * {
  margin-top: 0;
}

/* Quicklinks */
.quicklinks {
  padding: 0;
  list-style-type: none;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  flex-wrap: wrap;
}

.quicklinks a {
  display: flex;
  flex-direction: column;
  align-items: center;
  flex: 1 1 100px;
}

.quicklinks a {
  color: var(--default-text);
  font-size: var(--heading-4);
  font-family: var(--heading-font);
}

.quicklinks__icon {
  width: 75px;
  display: block;
  margin-bottom: 10px;
}

@media (max-width: 700px) {
  .quicklink-icon {
    width: 60px;
  }
  .quicklinks a {
    font-size: var(--base-font);
  }
  .quicklinks li {
    margin-bottom: 20px;
  }
}

/* News */
.news {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.news__item:last-of-type {
  margin-bottom: 40px;
}

/* tab switcher */
.tools {
  min-height: 280px;
}

.tabs {
  padding: 0;
  padding: 0;
  list-style-type: none;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  position: relative;
}

.tabs__tab {
  border: none;
  text-align: right;
  line-height: 1em;
  cursor: pointer;
  padding: 0.5em 0;
  background-color: transparent;
  font-family: var(--heading-font);
  color: var(--logo-blue);
  font-size: var(--heading-4);
  font-weight: var(--bold);
  transition: left 0.2s ease-out;
  position: relative;
  left: 0;
}

.tabs__tab:hover {
  left: 8px;
}

.tabs__content {
  border-top: solid 1px var(--light-gray);
  border-bottom: solid 1px var(--light-gray);
  border-right: solid 1px var(--light-gray);
  flex-grow: 1;
  padding: 20px 40px 20px 50px;
  position: relative;
}

.tabs::before {
  content: "";
  width: 8px;
  height: 100%;
  background-color: var(--dark-purple);
  position: absolute;
  top: 0;
  right: -20px;
  display: block;
  transition: background-color 0.2s ease-in-out;
}

.tabs[data-current-tab="0"]::before {
  background-color: var(--dark-purple);
}

.tabs[data-current-tab="1"]::before {
  background-color: var(--purple);
}

.tabs[data-current-tab="2"]::before {
  background-color: var(--blue);
}
/* ... */

